# DesktopWallE

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  platformio.ini
bridge/: README.md  config.py  config.toml.example  display.py  doubao_asr.py  doubao_asr_flash.py  doubao_tts.py  doubao_tts_unidirectional.py  mcp_server.py  protocol.py  requirements.txt  server.py  test_doubao_new.py  tracker.py
firmware-idf/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware-idf/main/: CMakeLists.txt  audio_udp.cpp  audio_udp.h  bridge_ws.cpp  bridge_ws.h  idf_component.yml  lcd.cpp  lcd.h  led.cpp  led.h  main.cpp  mic.cpp  mic.h  pmu.cpp  pmu.h  servo.cpp  servo.h  speaker.cpp  speaker.h  touch.cpp  touch.h  wifi_sta.cpp  wifi_sta.h
hermes-hotdog-plugin/: adapter.py  plugin.yaml  tools.py
hermes-hotdog-skill/: SKILL.md
hermes-stackchan-skill/: README.md  SKILL.md
hermes-stackchan-skill/scripts/: sc
include/: config.example.h
openclaw-stackchan-skill/: SKILL.md
openclaw-stackchan-skill/agents/: openai.yaml
src/: main.cpp
tools/: openclaw_stackchan_demo.sh
